# hyprbar

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  common.py  compositor.py  default_config.py  main.py  pyproject.toml  requirements.txt  setup.py  style.css
hyprbar/: __init__.py  __main__.py  common.py  compositor.py  default_config.py  system.py
hyprbar/modules/: app_title.py  calendar.py  circular_progress.py  power_menu.py  quick_settings.py  system_status.py  workspaces.py
hyprbar/widgets/: module_container.py
modules/: app_title.py  calendar.py  circular_progress.py  power_menu.py  system_status.py  workspaces.py
modules/sni_system_tray/: host.py  item.py  menu.py  tray.py  watcher.py
src/: bar.rs  common.rs  compositor.rs  config.rs  lib.rs  main.rs
src/modules/: app_title.rs  calendar.rs  mod.rs  power_menu.rs  workspaces.rs
widgets/: app_title.py  circular_progress.py  module_container.py
