[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
gtk4-layer-shell = "0.0.3"
relm4 = { version = "0.6.0", features = ["libadwaita"] }
relm4-components = "0.6.0"
serde_json = "1.0"
tracker = "0.2.1"
